--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "wagtailextraicons",
     "django-ninja",      # Core requirement for headless API
     "pydantic>=2.0",     # For schema validation
-    "psycopg2-binary",   # PostgreSQL adapter for production
+    "psycopg[binary]",   # PostgreSQL adapter (modern psycopg v3)
     "django-recaptcha",  # For reCAPTCHA protection
     "celery",            # For background email processing
     "redis",             # For Celery backend
