--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "headless-waf-builder"
+name = "headless-wagtail-advanced-form-builder"
 version = "1.0.0"
 description = "Headless Wagtail Advanced Form Builder - Complete REST API for modern frontend frameworks"
 readme = "README.md"
@@ -71,11 +71,11 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/octavenz/headless-waf-builder"
-Documentation = "https://octavenz.github.io/headless-waf-builder/"
-Repository = "https://github.com/octavenz/headless-waf-builder"
-"Bug Tracker" = "https://github.com/octavenz/headless-waf-builder/issues"
-Changelog = "https://github.com/octavenz/headless-waf-builder/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/octavenz/headless-wagtail-advanced-form-builder"
+Documentation = "https://octavenz.github.io/headless-wagtail-advanced-form-builder/"
+Repository = "https://github.com/octavenz/headless-wagtail-advanced-form-builder"
+"Bug Tracker" = "https://github.com/octavenz/headless-wagtail-advanced-form-builder/issues"
+Changelog = "https://github.com/octavenz/headless-wagtail-advanced-form-builder/blob/main/CHANGELOG.md"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
