--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "headless-wagtail-advanced-form-builder"
+name = "headless-waf-builder"
 version = "1.0.0"
 description = "Headless Wagtail Advanced Form Builder - Complete REST API for modern frontend frameworks"
 readme = "README.md"
